updated files with css

--- a/recipes/chocolate-chip-cookies.html
+++ b/recipes/chocolate-chip-cookies.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Chocolate chip cookies</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
