--- a/recipes/banana-bread.html
+++ b/recipes/banana-bread.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="uft-8">
         <title>Banana Bread</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
