--- a/recipes/french-toast.html
+++ b/recipes/french-toast.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>French Toast</title>
+        <link rel="stylesheet" href="styles.css">
     </head>
 
     <body>
